--- a/Settings/ViewControllers/About/about.html
+++ b/Settings/ViewControllers/About/about.html
@@ -2,27 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About Blink Shell</title>
+    <title>About Hypershell</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/skeleton.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/custom.css" type="text/css" media="screen" />
     <meta name = "viewport" content = "user-scalable=no, width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="section hero"></div>
     <div class="section blink">
       <div class="container">
 	<div class="row">
 	  <div class="twelve column">
-	    <h4>Copyright © 2016 The Blink Shell Project</h4>
-	    <p>Thank you for supporting Blink! Blink Shell is fully Open Source Software. You are welcome to use it, modify it and redistribute it under certain conditions, specified under the terms of the GNU General Public License. In addition, Blink is also subject to certain additional terms under the GNU GPL version 3 section 7.</p>
+	    <h4>Copyright © 2017 The Hypershell Project</h4>
+	    <p>Hypershell is fully Open Source Software. Hypershell is based on the Blink project. You are welcome to use it, modify it and redistribute it under certain conditions, specified under the terms of the GNU General Public License. In addition, Hypershell is also subject to certain additional terms under the GNU GPL version 3 section 7.</p>
 	  </div>
 	</div>
       </div>
       <div class="container description">
 	<div class="row">
 	  <div class="twelve columns">
-	    <p>Blink Shell makes use of and would like to thank the following open source projects:</p>
+	    <p>Hypershell makes use of and would like to thank the following open source projects:</p>
 	    <ul>
 	      <li><a href="https://mosh.mit.edu">Mosh</a> © 2012 Keith Winstein; GPLv3 license with OpenSSL linking exception, OCB patent grant and iOS waiver.
 		<p>Mosh was written by Keith Winstein, along with Anders Kaseorg, Quentin Smith, Richard Tibbetts, Keegan McAllister, and John Hood.</p>
@@ -680,9 +679,9 @@
 
       <div class="container">
 	<div class="row twelve columns">
-	  <h2>ADDITIONAL TERMS APPLICABLE TO BLINK</h2>
+	  <h2>ADDITIONAL TERMS APPLICABLE TO BLINK and HYPERSHELL</h2>
 	  <p>The following additional terms (Additional Terms) supplement and modify the 
-	    GNU General Public License, Version 3 (GPL) applicable to Blink. In addition to the
+	    GNU General Public License, Version 3 (GPL) applicable to Hypershell and Blink. In addition to the
 	    terms and conditions of the GPL, Blink is subject to the further restrictions below.</p>
 	  
 	  <ol><li>OpenSSL
